# ec2_cost_high_hai

./: .gitignore  Amazon_EC2_Instance_Comparison.csv  README.md  manage.py  mypy.ini  pyproject.toml
hackthon/: ec_metric.py  metric.py  metrics.py  settings.py  utilization.py
hackthon/ec2/: ec2_instance.py  lambda.py
hackthon/s3/: ec_metric.py  metric.py  s3_dump.py
