[tool.poetry]
name = "hackthon"
version = "0.1.0"
description = ""
authors = ["dhirajkt <dhiraj.kumar@synaptic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.3"
typer = "^0.9.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.3"
mypy = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
