[tool.poetry]
name = "hackthon"
version = "0.1.0"
description = ""
authors = ["dhirajkt <dhiraj.kumar@synaptic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.28.3"
typer = "^0.9.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.3"
openai = "^0.27.8"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
